--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,5 +1,7 @@
-= My notes
+= Hello
 
-* link:https://pwright.pages.redhat.com/interconnect2/[Interconnect 2 - downstream introduction]
-* xref:live-preview.adoc[]
-* xref:latest@what-is-antora:ROOT:index.adoc[]
+Hi there.
+
+//* link:https://pwright.pages.redhat.com/interconnect2/[Interconnect 2 - downstream introduction]
+* xref:page2.adoc[]
+//* xref:latest@what-is-antora:ROOT:index.adoc[]
